tests/error/modifier_errors/captured_var_inout_own.err
Error: Not owned (at $FILE:15:16)
   | 
13 |     a = qubit()
14 |     with dagger:
15 |         discard(a)
   |                 ^ Function `discard` wants to take ownership of this argument,
   |                   but `__modified__()` doesn't own `a`
   | 
13 |     a = qubit()
   |     - Argument `a` is only borrowed. Consider taking ownership:
   |       `a: qubit @owned`

Guppy compilation failed due to 1 previous error
